Add logo and a few little styling tweaks

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,7 @@ html
     #wrapper
       .main
         .header
+          img.logo-img(src="./images/logo.png" alt="Career Change Coders logo")
           h1
             strong #{community}
           h2 #{__('HEADER', community)}
